--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ exercises/exercise06/UserSettings
 exercises/exercise06/Temp
 exercises/exercise06/exercise06.sln
 exercises/exercise06/.vsconfig
+cmake-build-debug
+.idea
